# schema2pyarrow

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .releaserc.json  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.circleci/: config.yml  requirements.txt
schema2pyarrow/: airbyte_utils.py  exceptions.py  pyarrow_converter.py  resolve_refs.py  schema2pyarrow_cli.py
tests/: test_converter.py
tests/sample_schemas/: complex_array_schema.yaml  complex_schema.yaml  example_schemas.py  metadata.yaml  simple_schema.json
